--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an actress. I sing, I dance and I love food as much as theatre and voice acting. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and raised between Italy and Canada. School months were italian my summers canadian.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to eat, play videogames, pet my cat and go into nature. I also love reading plays, re enact them and sing. Did I mention that I love practicing Muai Thai?</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I have many. First I's love to make a living acting in theater or doing voice overs/ acting in videogames. Otherwise being a real estate mogul to allow me to live in Hawaii, where I can enjoy the island and play videogames all day as I boss around minions would be nice too lol</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Toronto. Lived in Vancouver (which I call home) and aspire to live in NY NY, or San Francisco or Hono Hulu.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to explore other avenues and this seems like a job that could take me in directions never imagined or even allow me to do enough freelance work, in order to be my own boss and keep persuing my first love (cheeky... I'm speaking about jobs).</p>
     </section>
 
     <footer id="footer">
