updating our details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I love to eat, play videogames, pet my cat and go into nature. I also love reading plays, re enact them and sing. Did I mention that I love practicing Muai Thai?</p>
       <h1>What's your dream job?</h1>
-      <p>I have many. First I's love to make a living acting in theater or doing voice overs/ acting in videogames. Otherwise being a real estate mogul to allow me to live in Hawaii, where I can enjoy the island and play videogames all day as I boss around minions would be nice too lol</p>
+      <p>I have many, but my one true love is to make a living acting in theater or doing voice overs/ acting in videogames. Otherwise I can settle on being a real estate mogul to allow me to live in Hawaii, where I can enjoy the island and play videogames all day as I boss around minions. lol</p>
       <h1>Where do you live?</h1>
       <p>I currently live in Toronto. Lived in Vancouver (which I call home) and aspire to live in NY NY, or San Francisco or Hono Hulu.</p>
       <h1>Why do you want to be a web developer?</h1>
