updating our status yet again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am an actress. I sing, I dance and I love food as much as theatre and voice acting. </p>
+      <p>I am an actress. I sing, I dance and I love food as much as theatre and voice acting. I practice Muai Thai and love to bike around the city. I love cats, but I have a lot of fun interacting with dogs too. I watch anime and movies and I am obsessed with a little videogame called Mass Effect. </p>
       <h1>Where I'm From</h1>
       <p>Born and raised between Italy and Canada. School months were italian my summers canadian.</p>
       <h1>What are your favorite hobbies?</h1>
